--- a/links.css
+++ b/links.css
@@ -6,10 +6,11 @@ body{
 .first{
   font-family: Algerian;
   color: rgb(173, 0, 0);
+  font-size: 50px;
 }
 
 .headin{
-  font-family: Algerian;
+  font-family: "Times New Roman", Times, serif;
   font-size: 40px;
 }
 
